fixed close button visibility in modal, changed custom navbar project text

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -27,7 +27,7 @@
     font-size: 15px;
 }
 .custom-nav {
-    width: 280px;
+    width: 250px;
     font-size: 12px;;
     text-align: center;
     border: 1px solid gray;
