--- a/src/css/projectspage.css
+++ b/src/css/projectspage.css
@@ -64,9 +64,6 @@ hr {
 	margin: 0.5rem 0;
 	width: 100%;
 }
-.modal-close-btn {
-	background-color: #2f3338 !important;
-}
 .video {
 	width: 100%;
 }
